[gd_scene load_steps=19 format=3 uid="uid://cn8xtr8s2dw8u"]

[ext_resource type="Script" path="res://scripts/player/player.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://221mmlwsdyi2" path="res://sprites/player/dead.png" id="3"]
[ext_resource type="Texture2D" uid="uid://b0q4vtmb4k8g" path="res://sprites/player/down.png" id="4"]
[ext_resource type="Texture2D" uid="uid://dm3en7dk6cng8" path="res://sprites/player/dl.png" id="5"]
[ext_resource type="Texture2D" uid="uid://c1ptrigiw5s7u" path="res://sprites/player/dr.png" id="6"]
[ext_resource type="Texture2D" uid="uid://blqaf6v83urmx" path="res://sprites/player/left.png" id="7"]
[ext_resource type="Texture2D" uid="uid://b3flu5c54j2ln" path="res://sprites/player/right.png" id="8"]
[ext_resource type="Texture2D" uid="uid://ceecchwu2r0g2" path="res://sprites/player/up.png" id="9"]
[ext_resource type="Texture2D" uid="uid://bwpyoqwihfnbt" path="res://sprites/player/ul.png" id="10"]
[ext_resource type="Texture2D" uid="uid://o8h6ye7r1sej" path="res://sprites/player/ur.png" id="11"]
[ext_resource type="Script" path="res://scripts/player/playerAnim.gd" id="12"]

[sub_resource type="RectangleShape2D" id="1"]
size = Vector2(2.5, 2.5)

[sub_resource type="SpriteFrames" id="2"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3")
}],
"loop": true,
"name": &"dead",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4")
}],
"loop": true,
"name": &"down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5")
}],
"loop": true,
"name": &"downLeft",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("6")
}],
"loop": true,
"name": &"downRight",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("7")
}],
"loop": true,
"name": &"left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("8")
}],
"loop": true,
"name": &"right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("9")
}],
"loop": true,
"name": &"up",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("10")
}],
"loop": true,
"name": &"upLeft",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("11")
}],
"loop": true,
"name": &"upRight",
"speed": 5.0
}]

[sub_resource type="Animation" id="3"]
resource_name = "dive"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3),
"transitions": PackedFloat32Array(1, 0.0473662, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1, 0.5), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite:skew")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 0.0]
}

[sub_resource type="Animation" id="4"]
resource_name = "jump"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0964, 0.4),
"transitions": PackedFloat32Array(1, 0.0490367, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.7, 1), Vector2(1, 1)]
}

[sub_resource type="Animation" id="5"]
resource_name = "wall_jump_left"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:skew")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1009, 0.3),
"transitions": PackedFloat32Array(1, 0.0441943, 1),
"update": 0,
"values": [0.0, -0.383972, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1144, 0.3),
"transitions": PackedFloat32Array(1, 0.0490367, 1),
"update": 0,
"values": [Vector2(0, 1), Vector2(0.8, 1), Vector2(1, 1)]
}

[sub_resource type="Animation" id="6"]
resource_name = "wall_jump_right"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:skew")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1009, 0.3),
"transitions": PackedFloat32Array(1, 0.0441943, 1),
"update": 0,
"values": [0.0, 0.383972, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1144, 0.3),
"transitions": PackedFloat32Array(1, 0.0490367, 1),
"update": 0,
"values": [Vector2(0, 1), Vector2(0.8, 1), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="7"]
_data = {
"dive": SubResource("3"),
"jump": SubResource("4"),
"wall_jump_left": SubResource("5"),
"wall_jump_right": SubResource("6")
}

[node name="Player" type="CharacterBody2D"]
texture_filter = 1
script = ExtResource("1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2(12.75, 12.75)
shape = SubResource("1")

[node name="RayCast2DL" type="RayCast2D" parent="."]
position = Vector2(0, 12)
target_position = Vector2(-17, 0)

[node name="RayCast2DL2" type="RayCast2D" parent="."]
position = Vector2(0, -12)
target_position = Vector2(-17, 0)

[node name="RayCast2DR" type="RayCast2D" parent="."]
position = Vector2(0, 12)
target_position = Vector2(17, 0)

[node name="RayCast2DR2" type="RayCast2D" parent="."]
position = Vector2(0, -12)
target_position = Vector2(17, 0)

[node name="RayCast2DL3" type="RayCast2D" parent="."]
target_position = Vector2(-17, 0)

[node name="RayCast2DR3" type="RayCast2D" parent="."]
target_position = Vector2(17, 0)

[node name="Sprite" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("2")
animation = &"up"
script = ExtResource("12")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("7")
}

[node name="SoundPlayers" type="Node" parent="."]

[node name="dead" type="AudioStreamPlayer2D" parent="SoundPlayers"]
panning_strength = 0.0
